Project Sistem_Aspirasi_Mahasiswa {
  database_type: 'MySQL'
  Note: 'Tabel relasional berdasarkan migration proyek FIX UAS INI'
}

Table users [headercolor: #000000] {
  id int [pk, increment]
  nim varchar(20) [not null, unique]
  nama varchar(100) [not null]
  email varchar(100) [not null, unique]
  password varchar(255) [not null]
  role enum('mahasiswa', 'admin', 'dosen') [not null, default: 'mahasiswa']
  prodi varchar(50) [not null]
  foto varchar(255)
  is_active boolean [not null, default: true]
  created_at timestamp
  updated_at timestamp
}

Table kategori [headercolor: #000000] {
  id int [pk, increment]
  nama_kategori varchar(50) [not null, unique]
  deskripsi text
  created_at timestamp
}

Table aspirasi [headercolor: #000000] {
  id int [pk, increment]
  user_id int [not null]
  kategori_id int
  judul varchar(200) [not null]
  isi text [not null]
  status enum('pending', 'diproses', 'selesai', 'ditolak') [not null, default: 'pending']
  lampiran varchar(255)
  is_anonymous boolean [not null, default: false]
  created_at timestamp
  updated_at timestamp
}

Table tanggapan [headercolor: #000000] {
  id int [pk, increment]
  aspirasi_id int [not null]
  admin_id int [not null, note: 'User dengan role admin atau dosen']
  isi_tanggapan text [not null]
  created_at timestamp
}

Table komentar [headercolor: #000000] {
  id int [pk, increment]
  aspirasi_id int [not null]
  user_id int [not null]
  isi_komentar text [not null]
  created_at timestamp
}

Table notifikasi [headercolor: #000000] {
  id int [pk, increment]
  user_id int [not null]
  aspirasi_id int
  pesan text [not null]
  dibaca boolean [not null, default: false]
  created_at timestamp
}

Ref: users.id < aspirasi.user_id [delete: cascade, update: cascade]
Ref: kategori.id < aspirasi.kategori_id [delete: set null, update: cascade]
Ref: aspirasi.id < tanggapan.aspirasi_id [delete: cascade, update: cascade]
Ref: users.id < tanggapan.admin_id [delete: cascade, update: cascade]
Ref: aspirasi.id < komentar.aspirasi_id [delete: cascade, update: cascade]
Ref: users.id < komentar.user_id [delete: cascade, update: cascade]
Ref: users.id < notifikasi.user_id [delete: cascade, update: cascade]
Ref: aspirasi.id < notifikasi.aspirasi_id [delete: cascade, update: cascade]
